SDKs/googleapis.com/tpu/v1/python/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
pip install openapi
```
<!-- End SDK Installation -->

<!-- Start SDK Example Usage -->
## SDK Example Usage

```python
import sdk
from sdk.models import operations, shared

s = sdk.SDK()
    
req = operations.TpuProjectsLocationsAcceleratorTypesListRequest(
    security=operations.TpuProjectsLocationsAcceleratorTypesListSecurity(
        oauth2=shared.SchemeOauth2(
            authorization="Bearer YOUR_ACCESS_TOKEN_HERE",
        )
        oauth2c=shared.SchemeOauth2c(
            authorization="Bearer YOUR_ACCESS_TOKEN_HERE",
        ),
    ),
    path_params=operations.TpuProjectsLocationsAcceleratorTypesListPathParams(
        parent="quidem",
    ),
    query_params=operations.TpuProjectsLocationsAcceleratorTypesListQueryParams(
        dollar_xgafv="1",
        access_token="quasi",
        alt="media",
        callback="aut",
        fields="in",
        filter="veritatis",
        key="quos",
        oauth_token="molestiae",
        order_by="blanditiis",
        page_size=4836021948156843738,
        page_token="ipsum",
        pretty_print=False,
        quota_user="nihil",
        upload_type="necessitatibus",
        upload_protocol="adipisci",
    ),
)
    
res = s.projects.tpu_projects_locations_accelerator_types_list(req)

if res.list_accelerator_types_response is not None:
    # handle response
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### projects

* `tpu_projects_locations_accelerator_types_list` - Lists accelerator types supported by this API.
* `tpu_projects_locations_list` - Lists information about the supported locations for this service.
* `tpu_projects_locations_nodes_create` - Creates a node.
* `tpu_projects_locations_nodes_list` - Lists nodes.
* `tpu_projects_locations_nodes_reimage` - Reimages a node's OS.
* `tpu_projects_locations_nodes_start` - Starts a node.
* `tpu_projects_locations_nodes_stop` - Stops a node, this operation is only available with single TPU nodes.
* `tpu_projects_locations_operations_cancel` - Starts asynchronous cancellation on a long-running operation. The server makes a best effort to cancel the operation, but success is not guaranteed. If the server doesn't support this method, it returns `google.rpc.Code.UNIMPLEMENTED`. Clients can use Operations.GetOperation or other methods to check whether the cancellation succeeded or whether the operation completed despite cancellation. On successful cancellation, the operation is not deleted; instead, it becomes an operation with an Operation.error value with a google.rpc.Status.code of 1, corresponding to `Code.CANCELLED`.
* `tpu_projects_locations_operations_delete` - Deletes a long-running operation. This method indicates that the client is no longer interested in the operation result. It does not cancel the operation. If the server doesn't support this method, it returns `google.rpc.Code.UNIMPLEMENTED`.
* `tpu_projects_locations_operations_list` - Lists operations that match the specified filter in the request. If the server doesn't support this method, it returns `UNIMPLEMENTED`. NOTE: the `name` binding allows API services to override the binding to use different resource name schemes, such as `users/*/operations`. To override the binding, API services can add a binding such as `"/v1/{name=users/*}/operations"` to their service configuration. For backwards compatibility, the default name includes the operations collection id, however overriding users must ensure the name binding is the parent resource, without the operations collection id.
* `tpu_projects_locations_tensorflow_versions_get` - Gets TensorFlow Version.
* `tpu_projects_locations_tensorflow_versions_list` - List TensorFlow versions supported by this API.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
